refactor(properties): Converted properties from Kotlin to Java.